cabal-version: >= 1.10
name:          neautrino
version:       0.1
synopsis:      Simple Scheme Interpreter
description:
  Simple Scheme Interpreter
author:        hyone
maintainer:    hyone
license:       BSD3
build-type:    Simple
-- included both in source and runtime distributions
data-files:    lib/*.scm
-- included only in source distributions
extra-source-files:
  test/doctest.hs
  test/test.hs
  test/LispCodeSpec.hs
  test/Neautrino/EnvSpec.hs
  test/Neautrino/FunctionSpec.hs
  test/Neautrino/Function/EqualSpec.hs
  test/Neautrino/LoadSpec.hs
  test/Neautrino/ParserSpec.hs
  test/Neautrino/SyntaxSpec.hs
  test/Neautrino/THSpec.hs.hs
  test/Neautrino/TestUtil.hs

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends: base >= 2.0
               , array >= 0.4.0.0
               , directory >= 1.1.0.2
               , filepath >= 1.3.0.0
               , mtl >= 2.1.2
               , parsec >= 3.1.3
               , syb >= 0.3.7
               , template-haskell >= 2.7.0
               , transformers >= 0.3.0.0
  exposed-modules:
    Neautrino
    Neautrino.Env
    Neautrino.Error
    Neautrino.Eval
    Neautrino.Function
    Neautrino.Function.Equal
    Neautrino.Function.Helper
    Neautrino.Load
    Neautrino.Parser
    Neautrino.Run
    Neautrino.Syntax
    Neautrino.TH
    Neautrino.Type
    Neautrino.Util
  other-modules:
    Neautrino.Internal.Parser
    Neautrino.Internal.Type
    Paths_neautrino 

executable neautrino
  default-language: Haskell2010
  main-is: run.hs
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends: base >= 2.0
               , array >= 0.4.0.0
               , directory >= 1.1.0.2
               , filepath >= 1.3.0.0
               , mtl >= 2.1.2
               , parsec >= 3.1.3
               , syb >= 0.3.7
               , template-haskell >= 2.7.0
               , transformers >= 0.3.0.0

test-Suite doctest
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: doctest.hs
  hs-source-dirs: src, test
  ghc-options: -threaded -Wall
  build-depends: base
               , doctest >= 0.9.5

test-suite spec
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: test.hs
  hs-source-dirs: src, test
  ghc-options: -Wall
  build-depends: base >= 2.0
               , array >= 0.4.0.0
               , directory >= 1.1.0.2
               , filepath >= 1.3.0.0
               , hspec >= 1.4.3
               , HUnit >= 1.2.5.1
               , mtl >= 2.1.2
               , parsec >= 3.1.3
               , QuickCheck >= 2.5.1
               , syb >= 0.3.7
               , template-haskell >= 2.7.0
               , transformers >= 0.3.0.0
               , neautrino

source-repository head
  type: git
  location: https://github.com/hyone/neautrino