cabal-version: >= 1.8
name:          simple-scheme
version:       0.1
synopsis:      Simple Scheme Implemention
description:
  Simple Scheme Implemention
author:        hyone
maintainer:    hyone
license:       BSD3
build-type:    Simple
-- included both in source and runtime distributions
data-files:    lib/*.scm
-- included only in source distributions
extra-source-files:
  test/test.hs
  test/LispCodeSpec.hs
  test/Scheme/FunctionSpec.hs
  test/Scheme/LoadSpec.hs
  test/Scheme/ParserSpec.hs
  test/Scheme/TestUtil.hs

library
  build-depends: base >= 2.0
                ,array >= 0.4.0.0
                ,directory >= 1.1.0.2
                ,filepath >= 1.3.0.0
                ,mtl >= 2.1.2
                ,parsec >= 3.1.3
                ,transformers >= 0.3.0.0
  exposed-modules:
    Scheme.Env
    Scheme.Error
    Scheme.Eval
    Scheme.Function
    Scheme.Function.Helper
    Scheme.Load
    Scheme.Parser
    Scheme.Type
    Scheme.Util
  other-modules:
    Scheme.Internal.Parser
    Scheme.Internal.Type
    Paths_simple_scheme 

executable simple-scheme
  main-is: run.hs
  build-depends: base >= 2.0
                ,array >= 0.4.0.0
                ,directory >= 1.1.0.2
                ,filepath >= 1.3.0.0
                ,mtl >= 2.1.2
                ,parsec >= 3.1.3
                ,transformers >= 0.3.0.0

test-suite tests
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs: test, .

  build-depends: base >= 2.0
                ,array >= 0.4.0.0
                ,directory >= 1.1.0.2
                ,filepath >= 1.3.0.0
                ,hspec >= 1.4.3
                ,HUnit >= 1.2.5.1
                ,mtl >= 2.1.2
                ,parsec >= 3.1.3
                ,QuickCheck >= 2.5.1
                ,transformers >= 0.3.0.0
                ,simple-scheme
  ghc-options: -Wall

source-repository head
  type: git
  location: https://github.com/hyone/simple-scheme