cabal-version: >= 1.10
name:          simple-scheme
version:       0.1
synopsis:      Simple Scheme Implemention
description:
  Simple Scheme Implemention
author:        hyone
maintainer:    hyone
license:       BSD3
build-type:    Simple
-- included both in source and runtime distributions
data-files:    lib/*.scm
-- included only in source distributions
extra-source-files:
  test/doctest.hs
  test/test.hs
  test/LispCodeSpec.hs
  test/Scheme/FunctionSpec.hs
  test/Scheme/Function/EqualSpec.hs
  test/Scheme/LoadSpec.hs
  test/Scheme/ParserSpec.hs
  test/Scheme/SyntaxSpec.hs
  test/Scheme/THSpec.hs.hs
  test/Scheme/TestUtil.hs

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends: base >= 2.0
               , array >= 0.4.0.0
               , directory >= 1.1.0.2
               , filepath >= 1.3.0.0
               , mtl >= 2.1.2
               , parsec >= 3.1.3
               , syb >= 0.3.7
               , template-haskell >= 2.7.0
               , transformers >= 0.3.0.0
  exposed-modules:
    Scheme.Env
    Scheme.Error
    Scheme.Eval
    Scheme.Function
    Scheme.Function.Equal
    Scheme.Function.Helper
    Scheme.Load
    Scheme.Parser
    Scheme.Syntax
    Scheme.TH
    Scheme.Type
    Scheme.Util
  other-modules:
    Scheme.Internal.Parser
    Scheme.Internal.Type
    Paths_simple_scheme 

executable simple-scheme
  default-language: Haskell2010
  main-is: run.hs
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends: base >= 2.0
               , array >= 0.4.0.0
               , directory >= 1.1.0.2
               , filepath >= 1.3.0.0
               , mtl >= 2.1.2
               , parsec >= 3.1.3
               , syb >= 0.3.7
               , template-haskell >= 2.7.0
               , transformers >= 0.3.0.0

test-Suite doctest
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: doctest.hs
  hs-source-dirs: src, test
  ghc-options: -threaded -Wall
  build-depends: base
               , doctest >= 0.9.5

test-suite spec
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: test.hs
  hs-source-dirs: src, test
  ghc-options: -Wall
  build-depends: base >= 2.0
               , array >= 0.4.0.0
               , directory >= 1.1.0.2
               , filepath >= 1.3.0.0
               , hspec >= 1.4.3
               , HUnit >= 1.2.5.1
               , mtl >= 2.1.2
               , parsec >= 3.1.3
               , QuickCheck >= 2.5.1
               , syb >= 0.3.7
               , template-haskell >= 2.7.0
               , transformers >= 0.3.0.0
               , simple-scheme

source-repository head
  type: git
  location: https://github.com/hyone/simple-scheme